--- a/epic.css
+++ b/epic.css
@@ -5,17 +5,18 @@ html, body, iframe, div {
 
 #epiceditor-utilbar {
   position:fixed;
-  bottom:10px;
-  right:10px;
+  top:16px;
+  left:10px;
 }
 
 #epiceditor-utilbar button {
   display:block;
-  float:left;
+  float:right;
   width:30px;
   height:30px;
   border:none;
   background:none;
+  outline: 0;
 }
 
 #epiceditor-utilbar button.epiceditor-toggle-preview-btn {
@@ -54,7 +55,7 @@ only screen and (                min-resolution: 2dppx) {
 }
 
 #epiceditor-utilbar button:last-child {
-  margin-left:15px;
+  margin-right:15px;
 }
 
 #epiceditor-utilbar button:hover {
@@ -67,4 +68,11 @@ only screen and (                min-resolution: 2dppx) {
 
 .epiceditor-preview-mode #epiceditor-utilbar button.epiceditor-toggle-preview-btn {
   display:none;
+}
+
+#epiceditor-editor-frame {
+  float: right !important;
+}
+#epiceditor-previewer-frame {
+  float: left !important;
 }
