--- a/moratab.css
+++ b/moratab.css
@@ -1,84 +1,82 @@
 
 body {
-	background: #fff;
-	margin: 0;
-	padding: 0 10px;
-}
-
-#epiceditor-preview {
 	font-family: IRMitra;
 	font-size: 18px;
 	line-height: 1.5;
 	direction: rtl;
+
+	background: #fff;
+	margin: 0;
+	padding: 0 10px;
 	color: #333;
 }
 
 /* header */
 
-#epiceditor-preview h1, #epiceditor-preview h2, #epiceditor-preview h3 {
+h1, h2, h3 {
 	line-height: 1.1;
 	margin-top: 20px;
 	margin-bottom: 10px;
 }
-#epiceditor-preview h1 {
+h1 {
 	font-size: 36px;
 }
-#epiceditor-preview h2 {
+h2 {
 	font-size: 30px;
 }
-#epiceditor-preview h3 {
+h3 {
 	font-size: 24px;
 }
 
 /* content */
 
-#epiceditor-preview p {
+p {
 	margin: 0 0 10px;
 }
 
-#epiceditor-preview a {
+a {
 	color: #428bca;
 	text-decoration: none;
 }
-#epiceditor-preview a:hover {
+a:hover {
 	color: #2a6496;
 	text-decoration: underline;
 }
 
-#epiceditor-preview ul, #epiceditor-preview ol {
+ul, ol {
 	margin-top: 0;
 	margin-bottom: 10px;
 	padding: 0 20px;
 }
-#epiceditor-preview li[dir=ltr] {
+li[dir=ltr] {
 	text-align: left;
 }
 
-#epiceditor-preview img {
+img {
 	margin: 20px auto;
 	display: block;
 	max-width: 100%;
 	box-shadow: 0 0px 5px #aaa;
 }
 
-#epiceditor-preview blockquote {
+blockquote {
 	padding: 10px 20px;
 	margin: 0 0 20px;
 	border-right: 5px solid #ddd;
 	border-left: none;
 }
-#epiceditor-preview blockquote[dir=ltr] {
+blockquote[dir=ltr] {
 	border-right: none;
 	border-left: 5px solid #ddd;
 }
-#epiceditor-preview blockquote p {
+blockquote p {
 	line-height: 1.25;
 }
-#epiceditor-preview blockquote p:last-child {
+blockquote p:last-child {
 	margin-bottom: 0;
 }
 
-#epiceditor-preview pre {
+pre {
 	direction: ltr;
 	background-color: #f5f5f5;
 	border: 1px solid #ccc;
@@ -87,17 +85,17 @@ body {
 	margin: 0 0 10px;
 	font-size: 13px;
 }
-#epiceditor-preview code {
+code {
 	font-size: 90%;
 	font-family: "Courier New", monospace;
 }
-#epiceditor-preview pre code {
+pre code {
 	font-size: inherit;
 }
 
 /* table */
 
-#epiceditor-preview table {
+table {
 	width: 100%;
 	color: inherit;
 	margin-bottom: 20px;
@@ -105,29 +103,29 @@ body {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-#epiceditor-preview table thead {
+table thead {
 	font-size: 90%;
 }
-#epiceditor-preview td[align=center], #epiceditor-preview th[align=center] {
+td[align=center], th[align=center] {
 	text-align: center;
 }
-#epiceditor-preview td[align=left], #epiceditor-preview th[align=left] {
+td[align=left], th[align=left] {
 	text-align: right;
 }
-#epiceditor-preview td[align=right], #epiceditor-preview th[align=right] {
+td[align=right], th[align=right] {
 	text-align: left;
 }
-#epiceditor-preview tr:nth-child(odd) > td {
+tr:nth-child(odd) > td {
 	background-color: #f9f9f9;
 }
-#epiceditor-preview td, #epiceditor-preview th {
+td, th {
 	padding: 8px;
 	vertical-align: top;
 }
-#epiceditor-preview th {
+th {
 	vertical-align: bottom;
 	border-bottom: 2px solid #ddd;
 }
-#epiceditor-preview td {
+td {
 	border-top: 1px solid #ddd;
 }
