--- a/moratab.css
+++ b/moratab.css
@@ -129,3 +129,15 @@ th {
 td {
 	border-top: 1px solid #ddd;
 }
+
+/* footnote */
+
+hr {
+	margin-top: 20px;
+	margin-bottom: 10px;
+	border: 0;
+	border-top: 1px solid #eee;
+}
+a[rev=footnote] {
+	display: none;
+}
