fix editor font

--- a/editor.css
+++ b/editor.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: IRMitra;
+	font-weight: normal;
+	src: url('IRMitra.woff') format('woff');
+}
+
 body {
 	tab-size: 4;
 	text-align: start;
