append simple footnotes before markdown conversion

--- a/editor.less
+++ b/editor.less
@@ -99,7 +99,7 @@
 	}
 
 	.code, .pre, .table {
-		font-family: "Courier New";
+		font-family: "Courier New", monospace;
 		font-size: 90%;
 		color: @tertiary-color-darker;
 	}
