--- a/editor.css
+++ b/editor.css
@@ -75,7 +75,7 @@
 #wmd-input .code,
 #wmd-input .pre,
 #wmd-input .table {
-  font-family: "Courier New";
+  font-family: "Courier New", monospace;
   font-size: 90%;
   color: #29333d;
 }
