--- a/moratab.css
+++ b/moratab.css
@@ -142,8 +142,8 @@ td {
 .footnotes p {
 	margin: 0;
 }
-hr {
-	margin-top: 20px;
+.footnotes hr {
+	margin-top: 30px;
 	margin-bottom: 10px;
 	border: 0;
 	border-top: 1px solid #eee;
