--- a/style/moratab.less
+++ b/style/moratab.less
@@ -1,5 +1,5 @@
 
-/* load IRMitra and BMitra fonts */
+// load IRMitra and BMitra fonts
 
 body {
 	font-family: IRMitra;
@@ -25,7 +25,7 @@ body {
 	  font-family: IRMitra, Arial;
 	}
 
-	/* header */
+	// header
 
 	h1, h2, h3 {
 		line-height: 1.1;
@@ -42,7 +42,7 @@ body {
 		font-size: 24px;
 	}
 
-	/* content */
+	// content
 
 	p {
 		margin: 0 0 10px;
@@ -135,7 +135,7 @@ body {
 		text-align: center;
 	}
 
-	/* table */
+	// table
 
 	table {
 		width: 100%;
@@ -173,7 +173,7 @@ body {
 		}
 	}
 
-	/* footnote */
+	// footnote
 
 	.footnotes p {
 		margin: 0;
@@ -191,16 +191,16 @@ body {
 
 @media print {
 	body {
-		font-size: 24px;
+		font-size: 20px;
 		color: #000;
 	}
 
 	.content {
 		h1, h2, h3 {
-			margin-top: 24px;
+			margin-top: 20px;
 		}
 		h1 {
-			font-size: 30px;
+			font-size: 28px;
 		}
 		h2 {
 			font-size: 24px;
