--- a/style/moratab.less
+++ b/style/moratab.less
@@ -75,7 +75,7 @@ body {
 
 	figure {
 		max-width: 100%;
-		margin: 24px auto 50px;
+		margin: 24px auto 40px;
 		display: table;
 
 		img {
@@ -161,7 +161,7 @@ body {
 			background-color: #f9f9f9;
 		}
 		td, th {
-			padding: 8px;
+			padding: 4px 8px;
 			vertical-align: top;
 		}
 		th {
