--- a/style/moratab.css
+++ b/style/moratab.css
@@ -64,7 +64,7 @@ body {
 }
 .content figure {
   max-width: 100%;
-  margin: 24px auto 50px;
+  margin: 24px auto 40px;
   display: table;
 }
 .content figure img {
@@ -146,7 +146,7 @@ body {
 }
 .content table td,
 .content table th {
-  padding: 8px;
+  padding: 4px 8px;
   vertical-align: top;
 }
 .content table th {
