remove link underline

--- a/style/moratab.less
+++ b/style/moratab.less
@@ -212,13 +212,13 @@ body {
 
 		a {
 			color: #000;
-			display: inline-block;
-			border-bottom: 1px solid #bbb;
-			line-height: 1;
-			padding-bottom: 3px;
+			// display: inline-block;
+			// border-bottom: 1px solid #bbb;
+			// line-height: 1;
+			// padding-bottom: 3px;
 		}
 		.footnote-ref a {
-			border-bottom: none;
+			// border-bottom: none;
 		}
 
 		figure {
