--- a/style/moratab.less
+++ b/style/moratab.less
@@ -80,6 +80,7 @@ body {
 		max-width: 100%;
 		margin: 24px auto 40px;
 		display: table;
+		page-break-inside: avoid;
 
 		img {
 			max-width: 100%;
