--- a/style/moratab.less
+++ b/style/moratab.less
@@ -80,7 +80,7 @@ body {
 		max-width: 100%;
 		margin: 24px auto 40px;
 		display: table;
-		page-break-inside: avoid;
+		text-align: center;
 
 		img {
 			max-width: 100%;
@@ -225,6 +225,7 @@ body {
 		figure {
 			border: 3px solid #eee;
 			border-bottom: none;
+			page-break-inside: avoid;
 
 			img {
 				box-shadow: none;
