--- a/style/moratab.less
+++ b/style/moratab.less
@@ -236,8 +236,15 @@ body {
 		}
 
 		table {
+			page-break-inside:auto;
+
 			thead {
 				font-size: 85%;
+			}
+
+			tr {
+				page-break-inside:avoid;
+				page-break-after:auto;
 			}
 		}
 
